package io.inoa.measurement.things.domain;

public enum MeasurandProtocol {
  JSON_REST_HTTP,
  MODBUS_RS458,
  MODBUS_TCP,
  S0,
  MBUS,
  WMBUS
}
