package io.inoa.measurement.things.domain;

public enum ThingConfigurationType {
  STRING,
  NUMBER,
  BOOLEAN
}
